mgmt/dev/helm/loki-base/kustomize/tenants/canary-user/collectors/http-raw/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-http-raw
  namespace: tenant-canary-user
  labels:
    tenant: canary-user
    collector: http-raw
    type: http
spec:
  selector:
    matchLabels:
      app: http-http-raw
  template:
    metadata:
      labels:
        app: http-http-raw
    spec:
      volumes:
        - name:  http-http-raw
          secret:
            secretName:  http-http-raw
      containers:
      - name: http-http-raw
        image: grafana/alloy:v1.12.2
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: http-http-raw
            readOnly: true
            mountPath: /etc/alloy/
