mgmt/dev/helm/loki-base/kustomize/tenants/canary-user/collectors/http-raw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-http-raw
  namespace: tenant-canary-user
  annotations:
    tenant: canary-user
    collector: http-raw
    type: http
spec:
  selector:
    app: http-http-raw
  ports:
  - port: 8080
    targetPort: 8080
